Fix title spacing: remove global subtitle offsets and whitespace split

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,3 @@
-.title-left.title-bottom {
-  position: relative;
-  left: -24px;
-}
-.title-right.title-bottom {
-  position: relative;
-  left: -24px;
-}
 .app-shell {
   display: flex;
   flex-direction: column;
